Fix layer control z-index and sidebar header alignment

--- a/radlkarte.css
+++ b/radlkarte.css
@@ -117,7 +117,7 @@ body,
   left: 40px;
   right: 0;
   box-sizing: border-box;
-  padding: 10px 20px;
+  padding: 0 20px 10px 20px;
 }
 
 .leaflet-sidebar-pane.active {
@@ -173,7 +173,9 @@ input {
 .leaflet-sidebar-header,
 .leaflet-sidebar-tabs > ul > li.active {
   background-color: #B8CC24;
-  color: #fff
+  color: #fff;
+  margin-top: 0;
+  padding-top: 10px;
 }
 
 .leaflet-sidebar-tabs > ul > li.active > a > i {
@@ -323,7 +325,7 @@ span.transitLine {
   position: absolute;
   top: 10px;
   right: 10px;
-  z-index: 1000;
+  z-index: 2100;
   background: white;
   border-radius: 5px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
